src/styles.css
body {
  height: 100vh;
  color: #061f41;
  margin: 0;
  padding: 20px;
  box-sizing: border-box;
  /* display: flex;
  justify-content: center;
  align-items: center; */
}

h2 {
  margin-bottom: 0;
}

#content {
  box-sizing: border-box;
  height: 100%;
  padding: 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.navigation-bar {
  width: 100%;
  position: fixed;
  top: 0;
}

.navigation-bar > ul {
  font-size: 2em;
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 20px;
}

.active {
  text-decoration: underline;
}

.main-content {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
}

.menu-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  height: 100%;
}

.menu-grid {
  flex-grow: 3;
  width: 100%;
  height: calc(100% - 100px);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(10, 100px);
  overflow: scroll;
}

.menu-header {
  display: flex;
  justify-content: center;
  align-items: center;
  grid-column: span 3;
}

.menu-item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer {
  margin-top: auto;
  text-align: center;
  position: relative;
}

.logo-header {
  height: 300px;
}

.logo-header-small {
  /* height: 100px; */
  width: 200px;
  object-fit: cover;
}

